# Video-Push-Pull-Encoding-and-Decoding

./: README.md
MachineVision-RTSP/: .gitignore  CMakeLists.txt  README.md
MachineVision-RTSP/src/: loadConfig.hpp
MachineVision-RTSP/src/TrtLib/builder/: CMakeLists.txt
MachineVision-RTSP/src/TrtLib/infer/: CMakeLists.txt  trt_infer.hpp
MachineVision-RTSP/src/VideoPusher/: CMakeLists.txt
MachineVision-RTSP/src/app_http/: CMakeLists.txt  http_server.cpp  http_server.hpp
MachineVision-RTSP/src/app_yolo/: CMakeLists.txt
MachineVision-RTSP/test/: test_ffmpeg_rtsp2rtmp.cpp  test_pushvideo.cpp  test_yolo_Instrument.cpp  test_yolo_http.cpp
MachineVision-RTSP/workspace/: config.json
RTSPClient-qt/: FFmpeg.cpp  FFmpeg.h  Makefile  RTSPClient  RTSPClient.pro  libavdevice.so.59.0.100  libavfilter.so.8.0.102  libavformat.so.59.3.100  libavutil.so.57  libavutil.so.57.0.100  libswresample.so.4.0.100  libswscale.so.6.0.100  login.cpp  main.cpp  video.cpp  video.h
RTSPClient-qt/include/libavutil/: ffversion.h
Windows-Wsl2-Trt-Yolo/: README.md  main.cpp
Windows-Wsl2-Trt-Yolo/src/TrtLib/common/: CMakeLists.txt  preprocess_kernel.cu
Windows-Wsl2-Trt-Yolo/src/TrtLib/infer/: trt_infer.cpp
Windows-Wsl2-Trt-Yolo/src/app_yolo/: yolo.cpp  yolo.hpp  yolo_decode.cu
Windows-Wsl2-Trt-Yolo/test/: common.hpp  test_json.cpp
Windows-Wsl2-Trt-Yolov8-Seg/: CMakeLists.txt  README.md
Windows-Wsl2-Trt-Yolov8-Seg/src/TrtLib/builder/: CMakeLists.txt
Windows-Wsl2-Trt-Yolov8-Seg/src/TrtLib/infer/: CMakeLists.txt
Windows-Wsl2-Trt-Yolov8-Seg/src/TrtLib/onnxplugin/: onnxplugin.cpp
Windows-Wsl2-Trt-Yolov8-Seg/test/: test_yolo_detect.cpp
利用openCV与Socket结合进行远程摄像头实时视频传输并保存图片数据/: Client.py  Server.py
